fixed donate image

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <p><a href="#" class="btn btn-outline-black">Donate</a></p>
               </div>
               <div class="col-md-6" data-aos="fade-left">
-                <img src="assets/img/donate@2x.png" alt="Image" class="img-fluid">
+                <img src="assets/img/Donate@2x.png" alt="Image" class="img-fluid">
               </div>
             </div>
           </div>
