--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="logo">
         <!-- <h1><a href="index.html">SoftLand</a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/CBBlogowht.png" alt="" class="img-fluid"></a>
+        <a href="https://attaboydesign.github.io/ChildrensBookBank_Homepage_Repo/"><img src="assets/img/CBBlogowht.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav id="navbar" class="navbar">
