--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="https://attaboydesign.github.io/ChildrensBookBank_Repo/">Volunteer</a></li>
-          <li><a class="" href="index.html">Donate</a></li>
+          <li><a class="" href="https://taraannbrooks.github.io/CBBDonate/">Donate</a></li>
           <li><a href="">About Us</a></li>
           <li><a class="" href="blog.html">Our Mission</a></li>
           <li><a href="contact.html">Contact Us</a></li>
@@ -200,7 +200,7 @@
           <div class="logo">
             <!-- <h1><a href="index.html">SoftLand</a></h1> -->
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html"><img src="assets/img/CBBlogowht@2x.png" alt="" class="img-fluid"></a>
+            <a href="https://attaboydesign.github.io/ChildrensBookBank_Homepage_Repo/"><img src="assets/img/CBBlogowht@2x.png" alt="" class="img-fluid"></a>
           </div>
           <p class="social">
             <a href="#"><span class="bi bi-twitter"></span></a>
@@ -232,9 +232,9 @@
             <!-- ======= end email ======= -->
             <ul class="footer-links d-flex">
               <div class="link-container">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="volunteer.html">Volunteer</a></li>
-                <li><a href="#">Donate</a></li>
+                <li><a href="https://attaboydesign.github.io/ChildrensBookBank_Homepage_Repo/">Home</a></li>
+                <li><a href="https://attaboydesign.github.io/ChildrensBookBank_Repo/">Volunteer</a></li>
+                <li><a href="https://taraannbrooks.github.io/CBBDonate/">Donate</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Our Mission</a></li>
               </div>
